Tue Jul 29 04:38:42 UTC 2014  Manjula Peiris  <tmpeiris@cs.iupui.edu>

        * cuts/unite/dmac/Dmac_Domain_Evidence.h:
        * cuts/unite/dmac/Dmac_Domain_Evidence.cpp:
        * cuts/unite/dmac/Dmac_Log_Format_File_Processor.h:
        * cuts/unite/dmac/Dmac_Log_Format_File_Processor.cpp:
        * cuts/unite/dmac/dmac.mpc:

          Fixes to the compilation issues in DMAC.

        * cuts/utils/evidence/DSF_Evidence.h:
        * cuts/utils/evidence/DSF_Evidence.cpp:
        * cuts/utils/evidence/DSF_Evidence_Combiner.h:
        * cuts/utils/evidence/DSF_Evidence_Combiner.cpp:

          Added the new files in DS theory evidence calculation.

        * cuts/utils/evidence/Dsf.h:
        * cuts/utils/evidence/Dsf.cpp:

          Removed these files.

Mon Jul 28 19:43:45 UTC 2014  Manjula Peiris  <tmpeiris@cs.iupui.edu>

        * cuts/unite/dmac/Dmac_Time_Evidence.h:
        * cuts/unite/dmac/Dmac_Time_Evidence.cpp:
        * cuts/unite/dmac/Dmac_Variable_Evidence.h:
        * cuts/unite/dmac/Dmac_Variable_Evidence.cpp:
        * cuts/unite/dmac/Dmac_export.h:

          Added the missing files to fix the compilation issues.

Wed Jul  9 14:14:02 UTC 2014  Manjula Peiris  <tmpeiris@cs.iupui.edu>

        * cuts/unite/Dataflow_Graph.h:
        * cuts/unite/Dataflow_Graph.inl:
        * cuts/unite/Dataflow_Graph.cpp:
        * cuts/unite/Dataflow_Graph_Analyzer.h:
        * cuts/unite/Dataflow_Graph_Analyzer.inl:
        * cuts/unite/Dataflow_Graph_Analyzer.cpp:
        * cuts/unite/Dataset_Repo.h:
        * cuts/unite/Dataset_Repo.cpp:
        * cuts/unite/Graph_Worker.h:
        * cuts/unite/Graph_Worker.cpp:
        * cuts/unite/Log_Format.h:
        * cuts/unite/Log_Format.cpp:
        * cuts/unite/Unite_App.h:
        * cuts/unite/Unite_App.cpp:
        * cuts/unite/Variable.h:
        * cuts/unite/cuts-unite.h:
        * cuts/unite/cuts-unite.inl:
        * cuts/unite/cuts-unite.cpp:

          Enable UNITE to support multi-sink dataflow models.
